--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -9,7 +9,7 @@ interface Props {
 }
 
 const {
-  title = "Ryan Pina - Software Engineer",
+  title = "Ryan PINA-SILASSE - Software Engineer",
   description = "Software Engineer specialized in React, Next.js, and Go",
   lang = "en",
 } = Astro.props;
@@ -36,7 +36,7 @@ const canonicalURL = Astro.site
     <meta property="og:url" content={canonicalURL} />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
-    <meta property="og:site_name" content="Ryan Pina Portfolio" />
+    <meta property="og:site_name" content="Ryan PINA-SILASSE Portfolio" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
