--- a/src/components/about/AboutPicture.astro
+++ b/src/components/about/AboutPicture.astro
@@ -2,9 +2,12 @@
 // src/components/about/AboutPicture.astro
 ---
 
-<div class="flex flex-col items-center justify-center p-8 animate-fade-right animate-once animate-duration-[1300ms]">
+<div class="flex flex-col items-center justify-center p-8">
   <div class="relative p-6">
-    <div class="absolute inset-8 rounded-md bg-gradient-to-r from-purple-600 to-indigo-600 transform -translate-x-6 -translate-y-6 -skew-y-6"></div>
+    <div
+      class="absolute inset-8 rounded-md bg-gradient-to-r from-purple-600 to-indigo-600 transform -translate-x-6 -translate-y-6 -skew-y-6"
+    >
+    </div>
     <div class="relative z-10">
       <img
         src="/photo.jpg"
