--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -5,12 +5,12 @@ const currentYear = new Date().getFullYear();
 <footer class="w-full bg-[#070707] text-center overflow-hidden">
   <div class="text-sm font-extralight p-4 text-center text-white">
     ©{currentYear} Copyright :
-    <a 
-      href="https://ryan-pina.com/" 
+    <a
+      href="https://ryan-pina.com/"
       rel="noopener noreferrer"
       class="hover:text-purple-400 transition-colors duration-300"
     >
-      {" "}Ryan Pina-Silasse
+      {" "}Ryan PINA-SILASSE
     </a>
   </div>
 </footer>
