--- a/src/pages/fr/about.astro
+++ b/src/pages/fr/about.astro
@@ -3,6 +3,7 @@ import MainLayout from "@layouts/MainLayout.astro";
 import BackgroundAnimation from "@components/ui/BackgroundAnimation.astro";
 import AboutPicture from "@components/about/AboutPicture.astro";
 import AboutInfos from "@components/about/AboutInfos.astro";
+import WhatIDo from "@components/about/WhatIDo.astro";
 import SocialLinks from "@components/ui/SocialLinks.astro";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
@@ -10,45 +11,31 @@ const title = "À propos - Ryan PINA-SILASSE";
 const description = "En savoir plus sur Ryan PINA-SILASSE, Ingénieur Logiciel";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
-const tCta = useTranslations(lang);
-
-// The CV route is determined based on the locale
-const cvPath = `/${lang === "fr" ? "CV_fr" : "CV_en"}.pdf`;
 ---
 
 <MainLayout title={title} description={description}>
   <BackgroundAnimation />
   <div class="flex flex-col min-h-screen py-16 px-4">
-    <div class="animate-fade-down animate-once animate-duration-[1300ms]">
+    <div id="about" class="max-w-5xl mx-auto w-full">
       <h3 class="text-5xl font-semibold text-indigo-500 text-center">
-        {t('about.title')}
+        {t("about.title")}
       </h3>
       <hr class="my-8 border-t border-indigo-700 w-1/2 mx-auto" />
     </div>
-    <div class="flex flex-col sm:flex-row items-center justify-center">
+
+    <div
+      class="flex flex-col sm:flex-row items-center justify-center max-w-5xl mx-auto w-full mb-8"
+    >
       <AboutPicture />
-      <AboutInfos lang={lang} />
+      <div class="flex flex-col md:w-1/2 mx-6">
+        <AboutInfos lang={lang} />
+      </div>
     </div>
-    <div class="flex flex-col items-center justify-center gap-4 mt-8">
-      <div class="flex flex-col md:flex-row justify-center items-center gap-4 animate-fade-up animate-once animate-duration-[1300ms]">
-        <a
-          href={cvPath}
-          target="_blank"
-          rel="noopener noreferrer"
-          class="w-full md:w-auto px-6 py-4 bg-indigo-600 text-white font-semibold text-lg rounded hover:bg-indigo-800 transition-colors text-center"
-        >
-          {tCta('cta.open_cv')}
-        </a>
-        <a
-          href="mailto:n95jsryan@gmail.com"
-          class="w-full md:w-auto px-6 py-4 bg-indigo-600 text-white font-semibold text-lg rounded hover:bg-indigo-800 transition-colors text-center"
-        >
-          {tCta('cta.mail_contact')}
-        </a>
-      </div>
-      <div class="flex justify-center animate-fade-up animate-once animate-duration-[1300ms]">
-        <SocialLinks />
-      </div>
+
+    <WhatIDo lang={lang} />
+
+    <div class="flex justify-center mt-8">
+      <SocialLinks />
     </div>
   </div>
 </MainLayout>
