--- a/src/pages/fr/skills.astro
+++ b/src/pages/fr/skills.astro
@@ -3,7 +3,7 @@ import MainLayout from "@layouts/MainLayout.astro";
 import BackgroundAnimation from "@components/ui/BackgroundAnimation.astro";
 import SkillsSection from "@components/skills/SkillsSection.astro";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
-import { skillsDetails } from "@utils/skillDetails";
+import { skillsDetails } from "@/data/skillDetails";
 
 const title = "Compétences - Ryan PINA-SILASSE";
 const description =
