--- a/src/components/hero/HeroTitle.astro
+++ b/src/components/hero/HeroTitle.astro
@@ -45,7 +45,7 @@ import CTAButtons from "./CTAButtons.astro";
     >
     <span
       class="inline-block animate-fade-right animate-delay-[1300ms] animate-duration-500"
-      >Problems</span
+      >Challenges</span
     >
     <span
       class="inline-block animate-fade-right animate-delay-[1500ms] animate-duration-500 text-cyan-400"
