--- a/src/pages/fr/about.astro
+++ b/src/pages/fr/about.astro
@@ -4,11 +4,10 @@ import BackgroundAnimation from "@components/ui/BackgroundAnimation.astro";
 import AboutPicture from "@components/about/AboutPicture.astro";
 import AboutInfos from "@components/about/AboutInfos.astro";
 import WhatIDo from "@components/about/WhatIDo.astro";
-import SocialLinks from "@components/ui/SocialLinks.astro";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
 const title = "À propos - Ryan PINA-SILASSE";
-const description = "En savoir plus sur Ryan PINA-SILASSE, Ingénieur Logiciel";
+const description = "En savoir plus sur Ryan PINA-SILASSE, Software Engineer";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
@@ -33,9 +32,5 @@ const t = useTranslations(lang);
     </div>
 
     <WhatIDo lang={lang} />
-
-    <div class="flex justify-center mt-8">
-      <SocialLinks />
-    </div>
   </div>
 </MainLayout>
