--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -25,11 +25,11 @@ const t = useTranslations(lang);
     >
       {
         projects.map((project) => (
-          <ProjectCard 
-            client:load 
+          <ProjectCard
+            client:load
             projectId={project.id}
             lang={lang}
-            buttonLabel={t('projects.button_label')}
+            buttonLabel={t("projects.button_label")}
           />
         ))
       }
