--- a/src/components/skills/SkillsSection.astro
+++ b/src/components/skills/SkillsSection.astro
@@ -1,27 +1,19 @@
 ---
-import SkillsGrid from "./SkillsGrid";
+import SkillsList from "./SkillsList";
 import type { SkillItem } from "@/data/skillDetails";
-import type { Lang } from "@types/i18n";
 import { useTranslations } from "@i18n/utils";
+import { ui } from "@i18n/ui";
 
 interface Props {
   skills: SkillItem[];
   category: string;
-  lang: Lang;
+  lang: keyof typeof ui;
 }
 
 const { skills, category, lang } = Astro.props;
 const t = useTranslations(lang);
 
-// Préparer les traductions pour le composant React
-const translations: Record<string, string> = {};
-// Préparer les données sérialisables (sans les composants React)
 const serializableSkills = skills.map((skill) => ({ key: skill.key }));
-
-skills.forEach((skill) => {
-  const key = `skills.list.${category}.${skill.key}`;
-  translations[key] = t(key as any);
-});
 ---
 
 <div class="my-6">
@@ -31,11 +23,6 @@ skills.forEach((skill) => {
   <div
     class="grid grid-cols-2 sm:grid-cols-2 lg:grid-cols-4 justify-items-center mx-8 lg:mx-[20rem] gap-6"
   >
-    <SkillsGrid
-      client:load
-      skills={serializableSkills}
-      category={category}
-      translations={translations}
-    />
+    <SkillsList client:load skills={serializableSkills} />
   </div>
 </div>
