--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ interface Props {
 
 const {
   title = "Ryan PINA-SILASSE - Software Engineer",
-  description = "Software Engineer specialized in React, Next.js, and Go",
+  description = "Software Engineer specialized in web and mobile development | React, Next.js, Go.",
   lang = "en",
 } = Astro.props;
 
