--- a/src/pages/fr/about.astro
+++ b/src/pages/fr/about.astro
@@ -6,8 +6,9 @@ import AboutInfos from "@components/about/AboutInfos.astro";
 import WhatIDo from "@components/about/WhatIDo.astro";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
-const title = "À propos - Ryan PINA-SILASSE";
-const description = "En savoir plus sur Ryan PINA-SILASSE, Software Engineer";
+const title = "À propos de Ryan PINA-SILASSE - Software Engineer";
+const description =
+  "25-year-old Software Engineer based in Drummondville, Quebec. 5 years of experience in web development. Currently working at Midbec, seeking opportunities in Toronto. Specialized in React and Go.";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
@@ -23,7 +24,7 @@ const t = useTranslations(lang);
     </div>
 
     <div
-      class="flex flex-col sm:flex-row items-center justify-center max-w-5xl mx-auto w-full mb-8"
+      class="flex flex-col sm:flex-row items-center justify-center w-full mb-8"
     >
       <AboutPicture />
       <div class="flex flex-col md:w-1/2 mx-6">
