--- a/src/pages/fr/contact.astro
+++ b/src/pages/fr/contact.astro
@@ -5,8 +5,8 @@ import ContactForm from "@components/contact/ContactForm.tsx";
 import ContactSocialLinks from "@components/contact/ContactSocialLinks.tsx";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
-const title = "Contact - Ryan PINA-SILASSE";
-const description = "Entrer en contact avec Ryan PINA-SILASSE";
+const title = "Contact Ryan PINA-SILASSE - Ingénieur Logiciel au Canada";
+const description = "Contactez-moi pour des opportunités d'ingénierie logicielle à Toronto, Ontario ou partout au Canada. Disponible pour postes permanents et projets freelance. Spécialiste React et Go.";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
