--- a/src/components/experience/ExperienceTimeline.astro
+++ b/src/components/experience/ExperienceTimeline.astro
@@ -1,7 +1,7 @@
 ---
 import ExperienceCard from "./ExperienceCard.tsx";
 import type { Experience } from "@types/index";
-import type { Lang } from "i18n";
+import type { Lang } from "@types/i18n";
 import { useTranslations } from "@i18n/utils";
 
 interface Props {
