--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,8 @@ import WhatIDo from "@components/about/WhatIDo.astro";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
 const title = "About - Ryan PINA-SILASSE";
-const description = "Learn more about me and my vision as a Software Engineer";
+const description =
+  "25-year-old Software Engineer based in Drummondville, Quebec. 5 years of experience in web development. Currently working at Midbec, seeking opportunities in Toronto. Specialized in React and Go.";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
