--- a/src/pages/fr/experience.astro
+++ b/src/pages/fr/experience.astro
@@ -5,8 +5,8 @@ import ExperienceTimeline from "@components/experience/ExperienceTimeline.astro"
 import { experiences } from "@data/experience";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
-const title = "Expérience Professionnelle - Ingénieur Logiciel | Ryan PINA-SILASSE";
-const description = "Plus de 5 ans d'expérience professionnelle comme Ingénieur Logiciel et Développeur Full Stack au Canada et en France. Actuellement chez Midbec (Québec), anciennement chez Konbini et French Innov.";
+const title = "Expérience - Ryan PINA-SILASSE";
+const description = "Plus de 5 ans d'expérience professionnelle comme Software Engineer et Développeur Full Stack au Canada et en France. Actuellement chez Midbec (Québec), anciennement chez Konbini et French Innov.";
 const lang = getLangFromUrl(Astro.url);
 const t = useTranslations(lang);
 ---
