--- a/src/pages/experience.astro
+++ b/src/pages/experience.astro
@@ -5,7 +5,7 @@ import ExperienceTimeline from "@components/experience/ExperienceTimeline.astro"
 import { experiences } from "@data/experience";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
-const title = "Experience - Ryan PINA-SILASSE";
+const title = "Experience | Ryan PINA-SILASSE";
 const description =
   "5+ years of professional experience as Software Engineer and Full Stack Developer in Canada and France. Currently at Midbec (Quebec), previously at Konbini and French Innov.";
 const lang = getLangFromUrl(Astro.url);
