--- a/src/pages/fr/about.astro
+++ b/src/pages/fr/about.astro
@@ -6,7 +6,7 @@ import AboutInfos from "@components/about/AboutInfos.astro";
 import WhatIDo from "@components/about/WhatIDo.astro";
 import { getLangFromUrl, useTranslations } from "@i18n/utils";
 
-const title = "À propos - Ryan PINA-SILASSE";
+const title = "À propos | Ryan PINA-SILASSE";
 const description =
   "Software Engineer de 25 ans basé à Drummondville, Québec. 5 ans d'expérience en développement web. Actuellement chez Midbec, à la recherche d'opportunités à Toronto. Spécialisé en React et Go.";
 const lang = getLangFromUrl(Astro.url);
