--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -3,7 +3,7 @@ import MainLayout from "@layouts/MainLayout.astro";
 import HeroTitle from "@components/hero/HeroTitle.astro";
 import BackgroundAnimation from "@components/ui/BackgroundAnimation.astro";
 
-const title = "Ryan PINA-SILASSE - Software Engineer";
+const title = "Ryan PINA-SILASSE | Software Engineer";
 const description =
   "Software Engineer avec plus de 5 ans d'expérience en React, Go et Next.js. Basé au Québec, à la recherche d'opportunités à Toronto et partout au Canada. Spécialisé en développement web, applications mobiles et systèmes backend évolutifs.";
 ---
